--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,9 @@
 [submodule "cozy-data-indexer"]
 	path = cozy-data-indexer
 	url = https://github.com/cozy/cozy-data-indexer.git
+[submodule "cozy-registry"]
+	path = cozy-registry
+	url = https://github.com/cozy/cozy-registry.git
+[submodule "cozy-mobile"]
+	path = cozy-mobile
+	url = https://github.com/cozy/cozy-mobile.git
